k8s/dummy-express-prom/dummy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-svc
  labels:
    app: dummy-svc
spec:
  selector:
    app: dummy
  ports:
    - name: dummy-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
